# finhack-i-love-tng

./: .env.example  .gitignore  Makefile  Procfile  README.md
.github/workflows/: deploy.yml
archive/fraud_detect_api/: Dockerfile
archive/fraud_detect_api/app/: cari_scraper.py  classifier.py  main.py  models.py  scraper.py
archive/layer3-behavioral-fraud/: Dockerfile
archive/layer3-behavioral-fraud/app/: main.py
archive/layer3-behavioral-fraud/scripts/: build_push_ecr.ps1  train_and_export.py
archive/mule_check_api/: main.py
archive/mule_check_api/db/: deps.py  schema.py
archive/mule_check_api/dummy_data/: seed.py
archive/mule_check_api/models/: semakmule.py
archive/mule_check_api/services/: nfp_service.py  semakmule_service.py
backend/: main.py  pyproject.toml  requirements.txt
backend/api/v1/: behavioral.py  fraud_scan.py  nfp.py  semakmule.py
backend/core/: config.py
backend/db/: ddl.sql  deps.py  schema.py  seed.py
backend/models/: behavioral.py  fraud_scan.py  nfp.py
backend/services/: nfp_service.py  semakmule_service.py
backend/services/behavioral/: data_loader.py  feature_engineering.py  ml_model.py  profile_builder.py  risk_scorer.py  rules_engine.py  sagemaker_client.py  service.py
backend/services/fraud_scan/: cari_scraper.py  classifier.py  keywords.py  prompts.py  scraper.py  service.py  telegram_scraper.py  tiktok_scraper.py
ci/docker/backend/: Dockerfile
ci/docker/frontend/: Dockerfile  nginx.conf
ci/task-definitions/: backend.json  frontend.json
fraud_detect_api/: .dockerignore  README.md  pyproject.toml  requirements.txt
fraud_detect_api/app/: classifier.py  keywords.py  main.py  models.py  prompts.py  scraper.py  telegram_scraper.py  tiktok_scraper.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: BlurText.tsx  Button.tsx  CountUp.tsx  FloatingReportCard.tsx  Footer.tsx  Magnet.tsx  ParticleNet.tsx  (+4 more)
layer3-behavioral-fraud/: .env.example  Dockerfile  README.md  pyproject.toml
layer3-behavioral-fraud/app/: main.py
layer3-behavioral-fraud/app/models/: response.py
layer3-behavioral-fraud/app/services/: data_loader.py  feature_engineering.py  ml_model.py  profile_builder.py  risk_scorer.py  sagemaker_client.py
layer3-behavioral-fraud/data/: transactions.json  users.json
layer3-behavioral-fraud/scripts/: Dockerfile.inference  deploy_endpoint.py  generate_synthetic_data.py  inference.py  serve.py
layer3-behavioral-fraud/tests/: test_scenarios.py
mule_check_api/: HANDBOOK.md  main.py  requirements.txt
mule_check_api/core/: config.py
mule_check_api/db/: deps.py
mule_check_api/dummy-data/: seed.py
mule_check_api/dummy_data/: seed.py
scripts/: get_telegram_session.py
(+20 files in other folders)
