[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "TNG FinHack — consolidated fraud detection backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Database
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    # HTTP clients
    "httpx>=0.27.0",
    "asyncpraw>=7.7.0",
    # Telegram MTProto
    "telethon>=1.36.0",
    # Browser automation
    "playwright>=1.43.0",
    "camoufox[geoip]>=0.4.0",
    # Content extraction
    "trafilatura>=1.8.0",
    "beautifulsoup4>=4.12.0",
    # LLM client
    "openai>=1.30.0",
    "json-repair>=0.30.0",
    # ML
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.3.0",
    # AWS
    "boto3>=1.34.0",
    # Config & utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
