[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fraud-detect-api"
version = "0.1.0"
description = "URL-based fraud detection API — scrape any link and classify for financial scams"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # HTTP clients
    "httpx>=0.27.0",
    "asyncpraw>=7.7.0",
    # Telegram MTProto API (avoids IP blocks on AWS)
    "telethon>=1.36.0",
    # Browser automation (JS-heavy pages)
    "playwright>=1.43.0",
    # Fingerprint-patched Firefox for Cloudflare bypass (Cari scraper)
    "camoufox[geoip]>=0.4.0",
    # Content extraction
    "trafilatura>=1.8.0",
    "beautifulsoup4>=4.12.0",
    # LLM client
    "openai>=1.30.0",
    "json-repair>=0.30.0",
    # Validation & config
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
fraud-api = "app.main:app"
