[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layer3-behavioral-fraud"
version = "0.1.0"
description = "TNG FinHack 2026 — Layer 3: per-user behavioral fraud detection (rules + Isolation Forest)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "joblib>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
